# my_project

./: Makefile  README.md  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
my_project/: __init__.py
