[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.0.1"
description = "some tests"
authors = [
  { name = "nagasawa", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11.5"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["my_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
